[1.8] Make sure the watch edit cell has proper height so, even underscore (_) is visible when typed.
http://code.google.com/p/fbug/source/detail?r=11326

--- a/extension/skin/classic/dom.css
+++ b/extension/skin/classic/dom.css
@@ -136,6 +136,7 @@
     background-color: LightYellow;
     border-bottom: 1px solid #BEBEBE;
     color: #666666;
+    line-height: 14px;
 }
 
 .editor-watchNewRow,
